<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--titleBar_layout-->
    <RelativeLayout
        android:id="@+id/scheme_default_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="@color/title_background" >


        <ImageView
            android:id="@+id/schem_default_logo"
            android:layout_width="@dimen/title_logo_width"
            android:layout_height="@dimen/title_logo_height"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/title_logo_left"
            android:src="@drawable/icon_titlebar"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/scheme_default_equiment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/title_logo_right"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:layout_toRightOf="@+id/schem_default_logo"
            android:layout_marginRight="5dp" />

        <ImageView
            android:id="@+id/video_btn"
            android:layout_width="@dimen/title_photo_image_size_width"
            android:layout_height="@dimen/title_photo_image_size_height"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_realtime"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/title_text_right"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/video_layout"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/scheme_default_title_layout"
        android:visibility="gone">


        <RelativeLayout
            android:id="@+id/video_progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/video_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/video_progress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="正在读取数据。"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone" />

        </RelativeLayout>


        <ImageView
            android:id="@+id/video_full_screen"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/icon_quanpin"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scheme_default_controller_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_layout">

        <TableLayout
            android:id="@+id/scheme_default_indicator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_300"
            android:stretchColumns="*"></TableLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scheme_default_parameter_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scheme_default_controller_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_not_selected_text"
            android:id="@+id/textview_no_indicator"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray_3"
            android:textSize="@dimen/textview_size_title" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/scheme_default_time_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:background="@color/gray_100"
        android:gravity="center"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/scheme_default_time_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/scheme_default_time_5m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/scheme_default_time_5m"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/scheme_default_time_10m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_default_time_10m"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/scheme_default_time_15m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_default_time_15m"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/scheme_default_time_30m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_default_time_30m"
                android:textColor="@color/black" />
        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>
